fixed cursor being too large

--- a/css/device-med-large.css
+++ b/css/device-med-large.css
@@ -2,6 +2,7 @@
 @media screen and (min-width: 992px) {
 .page {
     position: relative;
+    height: 100%;
     width: 950px;
     margin: auto;
 }
