--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
 body {
     /* /* font-family: var(--text-font);
     color: var(--color-text);  */
-    
+    height: 100vw;
     margin: 0;
     overflow-y: scroll;
 
@@ -32,6 +32,7 @@ h1 {
     color: var(--color-window-blue-dark);
     font-family: 'Jersey 10';
     font-size: 35px;
+    height: 35px;
     font-weight: lighter;
     text-shadow: var(--color-window-blue-light) 1px 1px 2px;
     margin: 0;
